[metadata]
author = msal_requests_auth Contributors
author_email = alansnow21@gmail.com
name = msal_requests_auth
description = Authentication using python requests and MSAL
keywords = msal, requests
long_description = file: README.rst
license = BSD License
license_file = LICENSE
platform = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules
    Typing :: Typed
url = https://github.com/corteva/msal-requests-auth
download_url = http://python.org/pypi/msal-requests-auth

[options]
packages = find:
zip_safe = False # https://mypy.readthedocs.io/en/stable/installed_packages.html
python_requires = >=3.8
include_package_data = True
install_requires =
    appdirs
    msal
    pyperclip
    requests

[options.package_data]
msal_requests_auth =
    py.typed

[options.packages.find]
include = msal_requests_auth*

[options.extras_require]
dev =
    pytest
    pytest-cov
    pre-commit
    pylint
all =
    %(dev)s

[bdist_wheel]
universal = 1
